Fix for title bar not updating for full page plugins bug 59749 r=av sr=attinasi a=choffman